# llm-learn

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
data/: sample.txt
js/: basic.js  chain.js  chain_parallel.js  graph.js  structured.js
sample/: multichat.py  multichat_error.py  openrouter.py  prompt_improve.py
src/: ann.py  autofix.py  basic.py  chain.py  chain_parallel.py  debug.py  fewshot.py  func_call.py  graph.py  history.py  mcp_playwright.py  memory_custom.py  nothinking.py  pydantic_out.py  rag.py  retry.py  saver.py  stream.py  structured.py  summary.py
target_for_test/: structured.py  token.py  token_parse.py
test/: test_metadata.py  test_structure.py
